# kimmdy-grappa

./: .gitignore  CHANGELOG.md  Makefile  README.md  _quarto.yml  _sidebar.yml  objects.json  out_converted.json  requirements.txt  setup.cfg
.github/workflows/: build-docs.yml  publish.yml  release.yml
_reference/: grappa_interface.qmd  index.qmd
docs/: index.html  robots.txt  search.json  sitemap.xml
docs/_reference/: grappa_interface.html  index.html
docs/site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
src/: grappa_interface.py
tests/: in_alanine.json  out_converted_alanine.json  out_parameterized.top  out_raw_alanine.json  test_parameterizers.py
