[metadata]
name = kimmdy-grappa
version = 0.3.0
license = MIT
description = Parameterization interface between KIMMDY and GrAPPa
description_content_type = text/markdown
long_description = file: README.md
long_description_content_type = text/markdown
author = Eric Hartmann
author_email = eric.hartmann@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    kimmdy
    MDAnalysis
    # grappa-ff --index-url https://download.pytorch.org/whl/cpu

python_requires = >= 3.8

[options.extras_require]
dev =
    pytest
    tox
    black
    hypothesis
    jupyter
    griffe >= 0.33, < 1.0.0
    quartodoc

[options.packages.find]
where=src

[options.entry_points]
kimmdy.parameterization_plugins =
    grappa = kimmdy_grappa.grappa_interface:GrappaInterface
